# smartGroceryList

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  importance.txt  products.txt  smartGroceryList.cpp  todo list
include/sgl/: grocery_list.hh  product.hh
products/: importance.txt  merge_products.py  products.txt
src/: CMakeLists.txt  main.cpp
src/lib/: grocery_list.cc  product.cc
